Fix overflow of the timer.

--- a/public/style.css
+++ b/public/style.css
@@ -51,7 +51,7 @@ footer {
 /* Timer */
 timer {
   display: block;
-  font-size: 250%;
+  font-size: 200%;
   width: 100%;
   text-align: center;
 }
